# CppGPT

./: .gitignore  CMakeLists.txt  CppGPT.cpp  LICENSE  readme.md
